# FME-Covered-Call-Strategy-Performance

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
output/tables/: cross_sectional_alpha.tex  performance_metrics.tex
report/: report.tex
scripts/: generate_report_assets.py  run_tests.py
src/: backtest.py  beta_analysis.py  black_scholes.py  config.py  data_fetcher.py  market_validation.py  monte_carlo.py  multi_ticker_backtest.py  option_time.py  payoff.py  risk_metrics.py  sensitivity.py  tenure_slicers.py  universe.py  visualizations.py
tests/: test_backtest.py  test_beta.py  test_data_fetcher.py  test_market_validation.py  test_monte_carlo.py  test_multi_ticker.py  test_payoff.py  test_risk_metrics.py
