[project]
name = "covered-call-project"
version = "0.1.0"
description = "ES418 Group 10 covered call strategy analysis project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.15",
    "scipy>=1.11",
    "seaborn>=0.12",
    "streamlit>=1.28",
    "yfinance>=0.2.28",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
